refactor: changes on method at FilterNeg class