@@ -8,7 +8,7 @@ public class FilterNegativeNumbers {
 
     public static void main(String[] args) {
         List<Integer> numbers = Arrays.asList(1, -22, 2, -1, 5, 100);
-        List<Integer> positive = numbers.stream().filter(number -> number > 0).toList();
+        List<Integer> positive = numbers.stream().filter(number -> number > 0).collect(Collectors.toList());
         positive.forEach(System.out::println);
     }
 }
